# aoc2020

./: README.md  pyproject.toml
02/: passwords.py
03/: trees.c
05/: README.md  seats.py
08/: README.md
09/: README.md  xmas.py
1/: expense.py
10/: README.md  joltage.py
11/: .gitignore  Makefile  README.md  seats.cpp  seats.py
12/: README.md  ship.py
13/: README.md  buses.py
14/: README.md  ferry.py
15/: README.md  elves.py
16/: README.md  tickets.py
17/: README.md  cubes.py
18/: README.md  homework.py
19/: README.md  monster.py
2/: README.md  passwords.py
20/: README.md  images.py  tile.py
21/: README.md  ingredients.py
22/: README.md  cards.py
23/: .gitignore  Makefile  README.md  cups.cpp  cups.py
24/: README.md  hexagon.py  lobby.py
25/: README.md  door.py
3/: Makefile  README.md  trees.py
4/: README.md  passports.js
5/: README.md  seats.py
6/: README.md  customs.py
7/: README.md  bags.py
8/: README.md  boot.py
9/: README.md  xmas.py
