[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = "Advent of Code 2020"
authors = ["Guillem <guillemglez@users.noreply.github.com>"]
license = "GPL v3.0"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
